更新调酒功能